# proyecto_cordoba

./: .gitignore  .replit  AGENTS.md  MANUAL_ROADMAP.md  PLAN_CLIENTE.md  pyproject.toml  replit.md  vercel.json
.agents/memory/: MEMORY.md  django-auth-templates.md  django-project-location.md  django-startup.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/mockup-sandbox/src/: App.tsx
attached_assets/: Ingeniería_Inversa_Plataformas_de_Viáticos_para_Pacientes_en_En_1782532454373.md  Proyecto_Córdoba_—_Manual_Completo_de_Desarrollo_(1)_1782532076667.md  deep-research-report_(7)_1782532389012.md
cordoba/: .env.example  .gitignore  railway.toml  requirements.txt
cordoba/apps/accounts/: admin.py  models.py
cordoba/apps/dashboard/: tests.py  urls.py  views.py
cordoba/apps/expenses/: admin.py  apps.py  forms.py  models.py  period_urls.py  services.py  tasks.py  tests.py  tests_e2e_full.py  urls.py  validators.py  views.py
cordoba/apps/intake/: admin.py  apps.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
cordoba/apps/patients/: admin.py  forms.py  models.py  urls.py  views.py
cordoba/config/: celery.py  urls.py  wsgi.py
cordoba/static/: manifest.json
cordoba/templates/: base.html  offline.html  sw.js
cordoba/theme/: input.css  package-lock.json  package.json  tailwind.config.js
scripts/: RAILWAY_DEPLOY.md  prepare-client-demo.ps1  seed-client-demo.ps1  smoke-e2e-production.ps1  start-client-demo-tunnel.ps1  start-client-demo.ps1
(+65 files in other folders)
