[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.4",
    "django-allauth==65.3.0",
    "django-environ==0.11.2",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "pillow==11.1.0",
    "psycopg2-binary==2.9.10",
    "whitenoise==6.9.0",
]
